--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Headless Content Director for URBANMISTRII",
     "main": "index.js",
     "scripts": {
-        "start": "mkdir -p /root/.clawdbot && cp -n /app/.clawdbot.skel/* /root/.clawdbot/ || true && npx clawdbot gateway"
+        "start": "mkdir -p /root/.clawdbot && echo '{\"gateway\":{\"mode\":\"local\",\"auth\":{\"mode\":\"token\",\"token\":\"0189e4e6a5381635fcd090b1dbc63ba98542577f5f5abb4c\"},\"port\":18789},\"agents\":{\"defaults\":{\"workspace\":\"/app/workspace\",\"model\":{\"primary\":\"google/gemini-2.5-flash\"}}},\"plugins\":{\"entries\":{\"whatsapp\":{\"enabled\":true}}},\"hooks\":{\"internal\":{\"enabled\":true,\"entries\":{\"boot-md\":{\"enabled\":true},\"command-logger\":{\"enabled\":true},\"session-memory\":{\"enabled\":true}}}}}' > /root/.clawdbot/clawdbot.json && npx clawdbot gateway"
     },
     "dependencies": {
         "clawdbot": "latest"
