docs: finalized deployment progress and guide

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,7 @@ HR_INBOX_ADDRESS=hr@urbanmistrii.com
 # Clawdbot Configuration
 CLAWDBOT_WEBHOOK_URL=https://your_domain.com/webhook
 CLAWDBOT_DEBUG=false
+CLAWDBOT_TOKEN=your_random_token_here
 
 # Server Configuration
 PORT=3000
